--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   public_active_active:
     name: Run tf-test on Public Active/Active
-    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active') || contains(fromJSON('["all", "public-active-active"]'), inputs.on_demand_scenario) }}
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active')}}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -210,7 +210,7 @@ jobs:
 
   private_active_active:
     name: Run tf-test on Private Active/Active
-    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active')  || contains(fromJSON('["all", "private-active-active"]'), inputs.on_demand_scenario) }}
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active') }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -447,7 +447,7 @@ jobs:
 
   private_tcp_active_active:
     name: Run tf-test on Private TCP Active/Active
-    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active')  || contains(fromJSON('["all", "private-tcp-active-active"]'), inputs.on_demand_scenario) }}
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active') }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
