--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -272,7 +272,7 @@ jobs:
           credentials_json: ${{ secrets.GCP_TUNNELING_CREDENTIALS }}
 
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
+        uses: google-github-actions/setup-gcloud@62d4898025f6041e16b1068643bfc5a696863587 # v1.1.0
 
       - name: Terraform Init
         id: init
@@ -509,7 +509,7 @@ jobs:
           credentials_json: ${{ secrets.GCP_TUNNELING_CREDENTIALS }}
 
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
+        uses: google-github-actions/setup-gcloud@62d4898025f6041e16b1068643bfc5a696863587 # v1.1.0
 
       - name: Terraform Init
         id: init
