--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -284,6 +284,7 @@ jobs:
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: |
           cat <<EOF > github.auto.tfvars
+          iact_subnet_list = ["( dig +short @resolver1.opendns.com myip.opendns.com )/32"]
           tfe = {
             hostname     = "${{ secrets.TFE_HOSTNAME }}"
             organization = "${{ secrets.TFE_ORGANIZATION }}"
@@ -520,7 +521,10 @@ jobs:
       - name: Write Terraform Variables
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: |
+          iact_subnet=$( dig +short @resolver1.opendns.com myip.opendns.com )
           cat <<EOF > github.auto.tfvars
+          iact_subnet_list = ["$iact_subnet/32"]
+          consolidated_services = true
           tfe = {
             hostname     = "${{ secrets.TFE_HOSTNAME }}"
             organization = "${{ secrets.TFE_ORGANIZATION }}"
