--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -83,7 +83,7 @@ jobs:
           iact_subnet=$( dig +short @resolver1.opendns.com myip.opendns.com )
           cat <<EOF > github.auto.tfvars
           iact_subnet_list = ["$iact_subnet/32"]
-          consolidated_services = true
+          consolidated_services_enabled = true
           tfe = {
             hostname     = "${{ secrets.TFE_HOSTNAME }}"
             organization = "${{ secrets.TFE_ORGANIZATION }}"
@@ -524,7 +524,7 @@ jobs:
           iact_subnet=$( dig +short @resolver1.opendns.com myip.opendns.com )
           cat <<EOF > github.auto.tfvars
           iact_subnet_list = ["$iact_subnet/32"]
-          consolidated_services = true
+          consolidated_services_enabled = true
           tfe = {
             hostname     = "${{ secrets.TFE_HOSTNAME }}"
             organization = "${{ secrets.TFE_ORGANIZATION }}"
@@ -778,7 +778,7 @@ jobs:
           iact_subnet=$( dig +short @resolver1.opendns.com myip.opendns.com )
           cat <<EOF > github.auto.tfvars
           iact_subnet_list = ["$iact_subnet/32"]
-          consolidated_services = true
+          consolidated_services_enabled = true
           tfe = {
             hostname     = "${{ secrets.TFE_HOSTNAME }}"
             organization = "${{ secrets.TFE_ORGANIZATION }}"
@@ -991,7 +991,7 @@ jobs:
           iact_subnet=$( dig +short @resolver1.opendns.com myip.opendns.com )
           cat <<EOF > github.auto.tfvars
           iact_subnet_list = ["$iact_subnet/32"]
-          consolidated_services = true
+          consolidated_services_enabled = true
           tfe = {
             hostname     = "${{ secrets.TFE_HOSTNAME }}"
             organization = "${{ secrets.TFE_ORGANIZATION }}"
